--- a/Ajax/index.html
+++ b/Ajax/index.html
@@ -33,3 +33,10 @@
     </script>
   </body>
 </html>
+
+
+<!-- Answers -->
+1. .container > div > div:nth-child(2n) span
+2. $('.container > div:nth-child(1) > div:nth-of-type(2n) span:nth-child(n+20):nth-of-type(2n+1)').css('background', 'blue');
+3. $('.container > div:nth-child(2) > div:nth-of-type(2n) span:nth-child(n+20):nth-of-type(2n+1):nth-of-type(7n)').css('background', 'orange');
+4. $('.container > div:nth-child(3) > div:nth-of-type(2n) span:nth-child(1), .container > div:nth-child(3) > div:nth-of-type(2n) span:nth-of-type(n+3):nth-of-type(2n), .container > div:nth-child(3) > div:nth-of-type(2n) span:nth-of-type(n+4):nth-of-type(3n), .container > div:nth-child(3) > div:nth-of-type(2n) span:nth-of-type(n+6):nth-of-type(5n), .container > div:nth-child(3) > div:nth-of-type(2n) span:nth-of-type(n+8):nth-of-type(7n), .container > div:nth-child(3) > div:nth-of-type(2n) span:nth-of-type(n+12):nth-of-type(11n), .container > div:nth-child(3) > div:nth-of-type(2n) span:nth-of-type(n+14):nth-of-type(13n), .container > div:nth-child(3) > div:nth-of-type(2n) span:nth-of-type(n+18):nth-of-type(17n)').css('background', 'black');
